--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,18 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+{{#sy-sidenav as |component section|}}
+  {{#if (eq section 'body')}}
+    <ul class="nav-side-list">
+      <li class="nav-side-list-item">
+        {{#link-to 'index'}}
+          <i class="fa fa-home"></i>
+          Home
+        {{/link-to}}
+      </li>
+    </ul>
+  {{else if (eq section 'page-content')}}
+    <main class="page-main">
+      <div class="page-content">
+        {{outlet}}
+      </div>
+    </main>
+  {{/if}}
+{{/sy-sidenav}}
