Set header property as positionalParam

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -3,7 +3,7 @@
     {{#sy-sidenav-list}}
       {{sy-sidenav-item 'index' 'home' 'Home'}}
     {{/sy-sidenav-list}}
-    {{#sy-sidenav-list header='Settings'}}
+    {{#sy-sidenav-list 'Settings'}}
       {{#sy-sidenav-item 'index' 'user'}}
         User
       {{/sy-sidenav-item}}
