--- a/addon/templates/components/sy-sidenav.hbs
+++ b/addon/templates/components/sy-sidenav.hbs
@@ -1,6 +1,8 @@
 <nav class="nav-side {{if slide 'slide-in'}} {{if expand 'nav-side--expand'}} {{if autohide 'nav-side--autohide'}}">
   <header class="nav-side-header">
-    <button class="nav-toggle nav-side-toggle" type="button" {{action 'toggle'}}></button>
+    <button class="nav-toggle nav-side-toggle" type="button" {{action 'toggle'}}>
+      <span class="nav-toggle-icon"></span>
+    </button>
     {{#link-to headerLink}}
       <div class="nav-side-header-logo"></div>
       <div class="nav-side-header-title">{{title}}</div>
