Add text in sidenav-item as title

--- a/addon/templates/components/sy-sidenav-item.hbs
+++ b/addon/templates/components/sy-sidenav-item.hbs
@@ -1,5 +1,5 @@
 {{#if link}}
-  {{#link-to link}}
+  {{#link-to link title=text}}
     {{#if icon}}<i class="fa fa-{{icon}}"></i>{{/if}}
     {{#if hasBlock}}
       {{yield}}
